src/tests/snapshots/funky__tests__wasm__arithmetic.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        1,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_LOCAL_GET(
                        2,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHL,
                    OP_I64_OR,
                    OP_LOCAL_GET(
                        3,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_LOCAL_GET(
                        4,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHL,
                    OP_I64_OR,
                    OP_I64_SUB,
                    OP_LOCAL_TEE(
                        5,
                    ),
                    OP_I64_STORE_32(
                        MemArg {
                            align: 2,
                            offset: 0,
                        },
                    ),
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        5,
                    ),
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHR_U,
                    OP_I64_STORE_32(
                        MemArg {
                            align: 2,
                            offset: 4,
                        },
                    ),
                ],
            },
            FunctionBody {
                locals: [
                    LocalEntry {
                        count: 1,
                        ty: I64,
                    },
                ],
                code: [
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        3,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_LOCAL_GET(
                        4,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHL,
                    OP_I64_OR,
                    OP_LOCAL_GET(
                        1,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_LOCAL_GET(
                        2,
                    ),
                    OP_I64_EXTEND_I32_U,
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHL,
                    OP_I64_OR,
                    OP_I64_MUL,
                    OP_LOCAL_TEE(
                        5,
                    ),
                    OP_I64_STORE_32(
                        MemArg {
                            align: 2,
                            offset: 0,
                        },
                    ),
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        5,
                    ),
                    OP_I64_CONST(
                        32,
                    ),
                    OP_I64_SHR_U,
                    OP_I64_STORE_32(
                        MemArg {
                            align: 2,
                            offset: 4,
                        },
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_LOCAL_GET(
                        0,
                    ),
                    OP_LOCAL_GET(
                        1,
                    ),
                    OP_F64_DIV,
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                    I32,
                    I32,
                    I32,
                ],
                return_types: [],
            },
            FunctionSignature {
                param_types: [
                    F64,
                    F64,
                ],
                return_types: [
                    F64,
                ],
            },
        ],
        funcaddrs: [
            0,
            1,
            2,
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "sub_i64",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "mult_i64",
                value: Function {
                    ty: 1,
                },
            },
            ExportInstance {
                name: "div",
                value: Function {
                    ty: 2,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                        I32,
                        I32,
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            1,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_LOCAL_GET(
                            2,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHL,
                        OP_I64_OR,
                        OP_LOCAL_GET(
                            3,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_LOCAL_GET(
                            4,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHL,
                        OP_I64_OR,
                        OP_I64_SUB,
                        OP_LOCAL_TEE(
                            5,
                        ),
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            5,
                        ),
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHR_U,
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 4,
                            },
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                        I32,
                        I32,
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I64,
                        },
                    ],
                    code: [
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            3,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_LOCAL_GET(
                            4,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHL,
                        OP_I64_OR,
                        OP_LOCAL_GET(
                            1,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_LOCAL_GET(
                            2,
                        ),
                        OP_I64_EXTEND_I32_U,
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHL,
                        OP_I64_OR,
                        OP_I64_MUL,
                        OP_LOCAL_TEE(
                            5,
                        ),
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            5,
                        ),
                        OP_I64_CONST(
                            32,
                        ),
                        OP_I64_SHR_U,
                        OP_I64_STORE_32(
                            MemArg {
                                align: 2,
                                offset: 4,
                            },
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        F64,
                        F64,
                    ],
                    return_types: [
                        F64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_LOCAL_GET(
                            0,
                        ),
                        OP_LOCAL_GET(
                            1,
                        ),
                        OP_F64_DIV,
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
}
