src/tests/snapshots/funky__tests__wasm__as_loop_br_if.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 6,
                        instruction: OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 2,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 5,
                                        instruction: OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    InstructionWrapper {
                                                        instruction_id: 1,
                                                        instruction: OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 2,
                                                        instruction: OP_BR_IF(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 3,
                                                        instruction: OP_I32_CONST(
                                                            2,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 4,
                                                        instruction: OP_RETURN,
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 7,
                        instruction: OP_I32_CONST(
                            3,
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "as-loop-first",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 6,
                            instruction: OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 2,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 5,
                                            instruction: OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 1,
                                                            instruction: OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 2,
                                                            instruction: OP_BR_IF(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 3,
                                                            instruction: OP_I32_CONST(
                                                                2,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 4,
                                                            instruction: OP_RETURN,
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 7,
                            instruction: OP_I32_CONST(
                                3,
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        ctrl_stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
