src/tests/snapshots/funky__tests__wasm__as_loop_mid_br_if.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 7,
                        instruction: OP_BLOCK(
                            Empty,
                            CodeBlock {
                                id: 2,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 6,
                                        instruction: OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    InstructionWrapper {
                                                        instruction_id: 1,
                                                        instruction: OP_CALL(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 2,
                                                        instruction: OP_LOCAL_GET(
                                                            0,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 3,
                                                        instruction: OP_BR_IF(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 4,
                                                        instruction: OP_I32_CONST(
                                                            2,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 5,
                                                        instruction: OP_RETURN,
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 8,
                        instruction: OP_I32_CONST(
                            4,
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [],
            },
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
            FuncAddr(
                1,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "as-loop-mid",
                value: Function {
                    ty: 1,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 7,
                            instruction: OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 2,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 6,
                                            instruction: OP_LOOP(
                                                Empty,
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 1,
                                                            instruction: OP_CALL(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 2,
                                                            instruction: OP_LOCAL_GET(
                                                                0,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 3,
                                                            instruction: OP_BR_IF(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 4,
                                                            instruction: OP_I32_CONST(
                                                                2,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 5,
                                                            instruction: OP_RETURN,
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 8,
                            instruction: OP_I32_CONST(
                                4,
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
