src/tests/snapshots/funky__tests__wasm__block_add_i32.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 4,
                        instruction: OP_BLOCK(
                            ValueType(
                                I32,
                            ),
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 1,
                                        instruction: OP_LOCAL_GET(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 2,
                                        instruction: OP_LOCAL_GET(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 3,
                                        instruction: OP_I32_ADD,
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 4,
                            instruction: OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 1,
                                            instruction: OP_LOCAL_GET(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 2,
                                            instruction: OP_LOCAL_GET(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 3,
                                            instruction: OP_I32_ADD,
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
