src/tests/snapshots/funky__tests__wasm__call.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    OP_I32_CONST(
                        42,
                    ),
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    OP_CALL(
                        0,
                    ),
                    OP_I32_CONST(
                        1,
                    ),
                    OP_I32_ADD,
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            0,
            1,
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "getAnswerPlus1",
                value: Function {
                    ty: 1,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_I32_CONST(
                            42,
                        ),
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        OP_CALL(
                            0,
                        ),
                        OP_I32_CONST(
                            1,
                        ),
                        OP_I32_ADD,
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
