src/tests/snapshots/funky__tests__wasm__empty.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_LOCAL_GET(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_I32_ADD,
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [
            MemoryAddr(
                0,
            ),
        ],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "add",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_LOCAL_GET(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_I32_ADD,
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
